<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/registerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_header"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_hint"
        android:layout_below="@id/registerHeader"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:layout_below="@id/fullNameEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@id/phoneEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint2"
        android:inputType="textPassword"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="58dp" />

    <TextView
        android:id="@+id/other_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_option"
        android:layout_below="@id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_in"
        android:padding="12dp"
        android:layout_below="@id/other_option"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/facebookSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_sign_in"
        android:padding="12dp"
        android:layout_below="@id/googleSignInButton"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/loginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt"
        android:layout_below="@id/facebookSignInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
</RelativeLayout>
