<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/loginHeader"
        android:layout_marginTop="62dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_below="@id/forgotPassword"
        android:layout_marginTop="60dp" />


    <TextView
        android:id="@+id/other_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_option"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_in"
        android:layout_below="@id/other_option"
        android:layout_marginTop="25dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/facebookSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_sign_in"
        android:layout_below="@id/googleSignInButton"
        android:layout_marginTop="20dp"
        android:padding="12dp" />

    <TextView
        android:id="@+id/register_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebookSignInButton"
        android:layout_marginTop="51dp"
        android:text="@string/register_prompt" />


</RelativeLayout>
